<resources>
    <string name="app_name">安徽艺术考级</string>
    <string name="home_tab_title_home">首页</string>
    <string name="home_tab_title_races">赛事</string>
    <string name="home_tab_title_grading">考级</string>
    <string name="home_tab_title_shop">商城</string>
    <string name="home_tab_title_my">我的</string>
    <string name="title_setting">设置</string>
    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="skip">跳过</string>
    <string name="enter_now">立即进入</string>
    <string name="agree">我同意</string>
    <string name="not_agree">不同意</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="go_home">返回首页</string>
    <string name="modify">修改</string>
    <string name="all">全部</string>
    <string name="loading">加载中…</string>
    <string name="loading_fail">加载失败，请稍后重试</string>
    <string name="no_more_data">暂无更多数据</string>
    <string name="click_2_load">请点击加载</string>
    <string name="scan_code">扫一扫</string>
    <string name="line_code">条形码</string>
    <string name="bar_code">二维码</string>
    <string name="scan_dark_tip">\n环境过暗，请右上角打开闪光灯</string>
    <string name="open_camera_fail">请打开相机权限</string>
    <string name="ok_read">确定，我已阅读</string>
    <string name="add_success">添加成功</string>
    <string name="modify_success">修改成功</string>
    <string name="save_success">保存成功</string>
    <string name="operate_success">操作成功</string>
    <string name="pay_cancel">取消支付</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_success">支付成功</string>
    <string name="modify_base_url_tip">保存成功，需杀死重启app方可生效</string>
    <string name="click_enter_develop_model">再点击%1$s次进入开发者模式</string>
    <string name="home_title">中国艺术协会考级平台</string>
    <string name="home_newest_data">最新动态</string>
    <string name="home_more_data">查看全部</string>
    <string name="home_activity_read_times">%1$d人阅读</string>
    <string name="home_newest_dynamic_search_hint">搜索您要的信息</string>
    <string name="notice_title">公告通知</string>
    <string name="notice_check_detail">查看详情</string>
    <string name="multi_language">设置系统语言</string>
    <string name="header_icon">头像</string>
    <string name="nickname">昵称</string>
    <string name="modify_pwd">修改密码</string>
    <string name="cancellation">注销账号</string>
    <string name="cancellation_tip">账号注销后所有信息将无法恢复，如需注销账号，请拨打客服电话：%1$s</string>
    <string name="customer_service_phone">10107177</string>
    <string name="logout_confirm_tip">确定退出登录？</string>
    <string name="modify_nickname_hint">请输入您的新昵称</string>
    <string name="modify_confirm">确认修改</string>
    <string name="modify_pwd_tip">密码设置必须是6–20个字符之间，包含英文字母、数字、特殊符号。</string>
    <string name="modify_pwd_error_tip1">2次密码输入不相同</string>
    <string name="modify_pwd_error_tip2">密码长度必须是6–20个字符</string>
    <string name="pwd_title">密码&#12288;&#12288;</string>
    <string name="re_pwd_title">确认密码</string>
    <string name="replace_pwd_success">恭喜密码更换成功</string>
    <string name="gallery">相册</string>
    <string name="camera">相机</string>
    <string name="add_address_title">添加收货地址</string>
    <string name="default_address">默认地址</string>
    <string name="address_delete_tip">确定删除收获地址？</string>
    <string name="address_username_hint">请输入收货人姓名</string>
    <string name="address_set_default">设为默认地址</string>
    <string name="address_phone_hint">请输入手机号码</string>
    <string name="address_select_area">请选择地区</string>
    <string name="address_hint">详细地址、如街道、楼牌号等</string>
    <string name="address_save">保存收货地址</string>
    <string name="login_title">登录</string>
    <string name="login_now">立即登录</string>
    <string name="modify_pwd_success">恭喜您密码设置成功！</string>
    <string name="modify_register_success">恭喜您账户注册成功！</string>
    <string name="login_input_username">请输入账号/手机号</string>
    <string name="login_input_old_pwd">原始密码</string>
    <string name="login_input_old_pwd_hint">请输入原始密码</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_input_pwd_hint">密码6–16位字符，区分大小写</string>
    <string name="login_re_input_pwd">密码6–16位字符，区分大小写</string>
    <string name="login_input_2_same_pwd">两次输入的密码不同</string>
    <string name="login_get_check_code">获取验证码</string>
    <string name="login_input_pic_code">请输入计算结果</string>
    <string name="login_input_check_code">请输入短信验证码</string>
    <string name="login_input_check_code_format">%1$ss</string>
    <string name="register_title">注册</string>
    <string name="logout_title">退出登录</string>
    <string name="logout_click_back_more">在点击一次退出程序</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_register_now">立即注册</string>
    <string name="login_go_login_tip">已有账号，去登录</string>
    <string name="get_check_code_desc">(%1$sS)后重发</string>
    <string name="login_agreement">请勾选同意用户条款和协议</string>
    <string name="my">我的</string>
    <string name="login_or_register">登录/注册</string>
    <string name="my_shop_car">购物车</string>
    <string name="my_ready_pay">待支付</string>
    <string name="my_running">进行中</string>
    <string name="my_finish">已完成</string>
    <string name="my_info">考生信息</string>
    <string name="my_enter_center">报名记录</string>
    <string name="my_report_list">我的成绩单</string>
    <string name="my_address">收货地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_connect_us">联系我们</string>
    <string name="my_send_advice">意见反馈</string>
    <string name="my_about_us">关于我们</string>
    <string name="call_customer_service_phone">拨打客服电话：%1$s</string>
    <string name="my_collect_goods">商品收藏</string>
    <string name="my_collect_shop">店铺收藏</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检测新版本</string>
    <string name="user_privacy">用户协议与隐私政策</string>
    <string name="user_privacy_disagree">不同意</string>
    <string name="user_privacy_agree">同意并继续</string>
    <string name="user_privacy_policy">隐私政策</string>
    <string name="user_user_agreement">用户协议</string>
    <string name="user_privacy_privacy_desc">感谢您选择%1$s，我们非常重视您的个人信息和隐私保护。
                                      请务必审慎阅读《用户协议》与《隐私政策》内的所有条款，
                                      您点击“同意并继续”的行为即表示您已阅读完毕并同意以上协议的全部内容。
                                      为了更好地保障您的个人权益，在您使用我们的产品前，
                                      如您同意以上协议内容，请点击“同意并继续”，开始使用我们的产品和服务!</string>
    <string name="suggest_complaint">投诉</string>
    <string name="suggest_advice">建议</string>
    <string name="suggest_question">故障</string>
    <string name="suggest_other">其他</string>
    <string name="suggest_select_type_title">选择问题类型</string>
    <string name="suggest_tip_title">请描述具体问题</string>
    <string name="suggest_tip_hint">尽情吐槽您体验不好的地方，或对我们提出改进性建议，我们每条都会看到。</string>
    <string name="suggest_submit">提交反馈</string>
    <string name="suggest_submit_success">提交成功，感谢您的反馈</string>
    <string name="user_agreement_tip">《用户使用条款及服务协议》</string>
    <string name="app_version">版本：%1$s</string>
    <string name="app_upgrade_title">版本升级</string>
    <string name="app_upgrade_next_time">下次再说</string>
    <string name="app_upgrade_now">立即升级</string>
    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示省市区选择器</string>
    <string name="picker_custom_lunar">公农历切换</string>
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>
    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="picker_custom_parent">自定义父容器</string>
    <string name="picker_use_circle_divider">使用圆形分割线</string>
    <string name="picker_non_linkage">条件选择器(不联动)</string>
    <string name="picker_json_parse_sample">省市区Json文件解析示例</string>
    <string name="student_info">考生信息</string>
    <string name="student_info_add">新增考生信息</string>
    <string name="student_info_detail">查看详细信息</string>
    <string name="student_info_header_icon_tip">请上传考生近期蓝底证件照，将被用作校验考生身份和证书制作</string>
    <string name="student_info_header_icon_upload_tip">请上传考生近期蓝底证件照</string>
    <string name="student_info_item_input_tip">*</string>
    <string name="student_info_item_input_hint">请输入</string>
    <string name="student_info_username">姓名</string>
    <string name="student_info_username_pinyin">姓名拼音</string>
    <string name="student_info_sex">性别</string>
    <string name="student_info_birthday">出生日期</string>
    <string name="student_info_country">国籍</string>
    <string name="student_info_nation">民族</string>
    <string name="student_info_ic_card">身份证</string>
    <string name="student_info_org">添加机构</string>
    <string name="student_info_friends">联系人</string>
    <string name="student_info_phone">手机号码</string>
    <string name="student_info_address">所在地址</string>
    <string name="student_info_address_hint">请输入详细地址，用于获奖证书邮寄</string>
    <string name="student_info_select_please">请选择</string>
    <string name="student_info_sex_man">男</string>
    <string name="student_info_sex_woman">女</string>
    <string name="student_info_select_org">选择机构</string>
    <string name="student_info_select_country">选择国籍</string>
    <string name="student_info_select_nation">选择民族</string>
    <string name="student_info_select_birthday_tip">请选择出生日期</string>
    <string name="student_info_select_org_tip">请选择机构</string>
    <string name="student_info_select_country_tip">请选择国籍</string>
    <string name="student_info_select_nation_tip">请选择民族</string>
    <string name="student_info_delete_tip">确定删除考生信息？</string>
    <string name="livepusher_camera_push">摄像头推流</string>
    <string name="livepusher_close">关闭</string>
    <string name="livepusher_coding_rate">编码码率</string>
    <string name="livepusher_upload_speed">上传网速</string>
    <string name="livepusher_model">机型</string>
    <string name="livepusher_version">Android系统版本</string>
    <string name="livepusher_fps">"FPS</string>
    <string name="livepusher_gop">"GOP</string>
    <string name="livepusher_step1">阶段一</string>
    <string name="livepusher_step1_value">检查地址合法性</string>
    <string name="livepusher_step2">阶段二</string>
    <string name="livepusher_step2_value">连接到云服务器</string>
    <string name="livepusher_step3">阶段三</string>
    <string name="livepusher_step3_value">摄像头打开成功</string>
    <string name="livepusher_step4">阶段四</string>
    <string name="livepusher_step4_value">编码器正常启动</string>
    <string name="livepusher_step5">阶段五</string>
    <string name="livepusher_step5_value">开始进入推流中…</string>
    <string name="livepusher_hardcode">编码器正常启动[硬编]</string>
    <string name="livepusher_softcode">编码器正常启动[软编]</string>
    <string name="livepusher_input_push_url">请输入推流地址</string>
    <string name="livepusher_check_url">检查地址合法性</string>
    <string name="livepusher_url_illegal">推流地址不合法，目前支持rtmp推流!</string>
    <string name="livepusher_license_check_fail">License 校验失败</string>
    <string name="livepusher_license_click_info"> 详情请点击[</string>
    <string name="livepusher_license_click_use_info"> 详情请点击[License 使用指南</string>
    <string name="livepusher_push_fail">推流失败</string>
    <string name="livepusher_comfirm">确定</string>
    <string name="livepusher_send">发送</string>
    <string name="livepusher_receive_event">receive event: </string>
    <string name="livepusher_pushing_start_stop_retry_push">当前正在推流，启动或关闭缩放需要重新推流</string>
    <string name="livepusher_screenshot_success">截图成功</string>
    <string name="livepusher_screenshot_fail">截图失败</string>
    <string name="livepusher_screenshot_fail_push">截图失败，请先发起推流</string>
    <string name="livepusher_share_pic">图片分享</string>
    <string name="livepusher_network_warning_hint">当前网络质量很糟糕，建议您拉近离路由器的距离，避免WiFi穿墙！</string>
    <string name="livepusher_local_snapshot">本地截图</string>
    <string name="livepusher_snapshot">截图</string>
    <string name="livepusher_send_message">发送消息</string>
    <string name="livepusher_empty_message">发送消息</string>
</resources>