<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <com.moa.rxdemo.weiget.SettingEditItemView
            android:id="@+id/username_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/divider"/>

        <com.moa.rxdemo.weiget.SettingEditItemView
            android:id="@+id/pwd_view"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/divider"/>

        <com.moa.rxdemo.weiget.SettingPicCodeItemView
            android:id="@+id/auth_code_view"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/divider"/>

        <com.moa.rxdemo.weiget.SettingCodeItemView
            android:id="@+id/check_view"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View style="@style/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textColor="@color/color_888888"
                android:button="@drawable/check_box_selector"
                android:textSize="14sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/tv_agreement_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement_tip"
                android:textSize="14sp"
                android:textColor="@color/color_7A67FB"/>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:enabled="false"
            android:background="@drawable/register_btn_selector"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_go_login"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login_go_login_tip"
            android:paddingBottom="20dp"
            android:paddingTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/color_B2B2B2"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
